2007-01-16 21:59  mkm

	Expose ReplayGain Multiplier on Settings dlg, updated docs.

2007-01-16 21:09  mkm

	Fixed bug in Settings/Remote dlg, wasn't properly
	loading/displaying remote control descriptions.  Added Purchase
	button to License dlg, takes user to website for purchase, carries
	name & email vals to website.

2007-01-11 22:58  mkm

	Adjust prj settings for multithreaded.

2007-01-11 22:55  mkm

	Update to help on ReplayGain

2007-01-10 18:52  mkm

	Disable trial mode for the beta, forgot to do it last night.

2007-01-10 15:07  mkm

	Updated publish script to push out ChangeLog

2007-01-10 14:52  mkm

	In tag editing MB was stripping quotes from the value entered by
	the user. Not doing it now.

2007-01-09 22:58  mkm

	Tag Export: allow additional tag keys to be specified/exported.

2007-01-09 16:12  mkm

	Improved visuals on tag editor dialog.

2007-01-09 14:26  mkm

	bmp's for setup

2007-01-09 01:42  mkm

	Publish

2007-01-09 01:39  mkm

	Settings dlg slightly too wide for 640x display, fixed.

2007-01-09 01:20  mkm

	Bug in FileFolderDlg

2007-01-08 23:51  mkm

	Settings: verify dblocation has a skins dir, with
	MBClassic/SkinDef.mbsd in it.

2007-01-08 23:16  mkm

	Tuning logging for release.

2007-01-08 17:46  mkm

	Do GC every 1428 edits, about 1mb worth of g.

2007-01-08 17:21  mkm

	Search for new music from menu now also looks for files that have
	been modified, i.e. by other software. Quick way to get MB in sync.

2007-01-08 15:47  mkm

	If Play button clicked with empty playlist was starting 1 sec
	position timer. Fixed. Also changed updatePlaylist to clear stop
	flag.

2007-01-08 15:29  mkm

	Call resetControls if needed after returning from Settings dlg.

2007-01-08 15:24  mkm

	DisplayComments configurable Setting.

2007-01-07 23:15  mkm

	Can't use wmfsdk for id3v2.4 reading, doesn't work.

2007-01-07 17:02  mkm

	get/setArt for mbtag.

2007-01-07 13:22  mkm

	getArt for flac. Gets cover art from flac metadata.

2007-01-07 12:14  mkm
