@@ -1,3 +1,8 @@
+2007-01-16 22:51  mkm
+
+	Bug fixed, when upgrading wasn't overwriting DbLocation with new
+	location, was causing skins dir to not be found.
+
 2007-01-16 21:59  mkm
 
 	Expose ReplayGain Multiplier on Settings dlg, updated docs.
